✨feat: 시간표 API 개발 완료 기본적인 시간표 CRUD 기능 개발 완료했습니다. 추후 프론트를 개발하면서 수정될 가능성이 높으며, 예외처리와 로그도 수정할 계획입니다. 삭제 기능 또한 삭제한 사람의 ID를 받아야 해서 추후 개발완료할 예정입니다. related to: #6